@@ -219,6 +219,13 @@ static void read_from_feed(void)
 	while(read_an_ssl_line(feed->ssl_read, line, sizeof(line))) {
 		/* stop at empty line */
 		if(verbosity > 2) printf("feed: %s\n", line);
+		if(strcmp(line, "stop") == 0) {
+			strlist_delete(first);
+			gdk_threads_enter();
+			gtk_main_quit();
+			gdk_threads_leave();
+			return;
+		}
 		if(line[0] == 0) {
 			strlist_delete(feed->results);
 			feed->results = first;
